# ITMO-ICT-Analysis-of-Cultural-Data-2025-2026

./: README.md  main.ipynb  pyproject.toml  requirements.txt
