[project]
name = "itmo-ict-analysis-of-cultural-data-2025-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "factor-analyzer>=0.5.1",
    "ipywidgets>=8.1.7",
    "kagglehub[pandas-datasets]>=0.3.12",
    "matplotlib>=3.10.1",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
